# tag

./: cabal.haskell-ci  tag.cabal
.github/workflows/: haskell-ci.yml
src/Data/: Tag.hs
src/Data/Tag/: Internal.hs  Map.hs  Rec.hs  Sum.hs  TagMap.hs  Unsafe.hs  Vec.hs
src/Data/Tag/Internal/: Utils.hs
src/Data/Tag/Map/: Internal.hs
src/Data/Tag/Rec/: Internal.hs
src/Data/Tag/TagMap/: Internal.hs
src/Data/Tag/Vec/: Internal.hs
test/: TagSpec.hs
